--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ nav {
 /* user stat */
 .user-stat{
      background-color: #fff;
-			padding: 160px 165px 0px;
+			padding: 170px 165px 0px;
 			font-size: 24px;
 			color: #333;
 }
@@ -132,7 +132,22 @@ nav {
   font-size: 18px;
   font-weight: light;
   color:#969696;
-  padding-top: 0;
+  
+}
+
+.row-img{
+  display: flex;
+  padding-right: 10px;
+}
+
+.stat-img{
+  height: 50px;
+  border-radius: 50%;
+}
+.stat-top{
+  display: flex;
+  align-items: center;
+ 
 }
 
 /* features */
